objects/Contact.object
<CustomObject>
    <fields>
        <fullName>FB_Person_Title__c</fullName>
        <label>FB Person Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Featured_user__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field shows if a contact has been a featured user in the Community</description>
        <label>Featured user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Conversion__c</fullName>
        <description>This field is created as part of Qentinal data Migration</description>
        <label>First Conversion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Email_Received__c</fullName>
        <label>First Email Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Email_Sent__c</fullName>
        <label>First Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fortella_Buyer_Persona__c</fullName>
        <inlineHelpText>This persona that Fortella platform standardizes based on job level and function</inlineHelpText>
        <label>Fortella Buyer Persona</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FunnelBeam_Enrichment_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FunnelBeam Enrichment Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FunnelBeam_Posting_Tag__c</fullName>
        <label>FunnelBeam Posting Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_am_existing_customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I am existing customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_am_existing_customer_or_partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I am existing customer or partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_am_existing_partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I am existing partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ihr_Name__c</fullName>
        <formula>LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ihr Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Industries the contact knows about or is assigned to.  This field was originally used to track the industries for contacts that work at Salesforce.</description>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retail &amp; CG</fullName>
                </value>
                <value>
                    <fullName>Healthcare &amp; Life Sciences</fullName>
                </value>
                <value>
                    <fullName>Engineering, Construction, &amp; Real Estate</fullName>
                </value>
                <value>
                    <fullName>High Tech</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Agriculture &amp; Mining</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Communications &amp; Media</fullName>
                </value>
                <value>
                    <fullName>Travel, Transportation, &amp; Hospitality</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Public Sector</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Playgrounds_Test_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used by admins so, when playgrounds in academy are deactivated due to maintenance, they can use a community user with its contact having this field set to true, so they can test if the problem is already fixed before reactivating the creation of playgrounds for all users. This field will not be added to any layout.</description>
        <label>Is Playgrounds Test User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Role__c</fullName>
        <label>Job Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
                <value>
                    <fullName>CoE Lead</fullName>
                </value>
                <value>
                    <fullName>Delivery Manager</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>IT Leader</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Quality Analyst</fullName>
                </value>
                <value>
                    <fullName>Release Manager</fullName>
                </value>
                <value>
                    <fullName>Technical Architect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is used by an AE to designate an important contact to them. Lists and reports can use this as a filter so AEs can only see their important contacts</inlineHelpText>
        <label>Key Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KickBox_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KickBox Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kickbox_Accept_All__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kickbox Accept All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kickbox_Did_You_Mean__c</fullName>
        <label>Kickbox Did You Mean</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kickbox_Disposable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kickbox Disposable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kickbox_Free__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kickbox Free</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kickbox_Reason__c</fullName>
        <label>Kickbox Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>low_deliverability</fullName>
                </value>
                <value>
                    <fullName>accepted_email</fullName>
                </value>
                <value>
                    <fullName>low_quality</fullName>
                </value>
                <value>
                    <fullName>rejected_email</fullName>
                </value>
                <value>
                    <fullName>unavailable_smtp</fullName>
                </value>
                <value>
                    <fullName>no_connect</fullName>
                </value>
                <value>
                    <fullName>invalid_domain</fullName>
                </value>
                <value>
                    <fullName>unexpected_error</fullName>
                </value>
                <value>
                    <fullName>timeout</fullName>
                </value>
                <value>
                    <fullName>invalid_email</fullName>
                </value>
                <value>
                    <fullName>invalid_smtp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kickbox_Result__c</fullName>
        <label>Kickbox Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>risky</fullName>
                </value>
                <value>
                    <fullName>deliverable</fullName>
                </value>
                <value>
                    <fullName>undeliverable</fullName>
                </value>
                <value>
                    <fullName>unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kickbox_Sendex__c</fullName>
        <label>Kickbox Sendex</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the contact</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LanguageLocaleKey__c</fullName>
        <label>LanguageLocaleKey</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Call_In__c</fullName>
        <label>Last Call In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Call_Out__c</fullName>
        <label>Last Call Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Data_Alert_Found__c</fullName>
        <label>Last Data Alert Found</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Email_Received__c</fullName>
        <label>Last Email Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Email_Sent__c</fullName>
        <label>Last Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Meeting__c</fullName>
        <label>Last Meeting</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Release_Communication_Sent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Release Communication Sent</label>
        <referenceTo>Release_Communication__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <description>Used to get a granular look at our EBQ campaigns for each lead source and across both leads and contacts.</description>
        <label>Lead Source Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Left_the_Business__c</fullName>
        <label>Left the Business</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Data__c</fullName>
        <description>This Field will be used For Distinguishing Migrated Legacy Data from Acquisition</description>
        <label>Legacy Data</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Context</fullName>
                </value>
                <value>
                    <fullName>Qentinel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage__c</fullName>
        <description>This field is created as part of Qentinal data Migration</description>
        <label>Lifecycle Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscriber</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Marketing Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Sales Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Evangelist</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Linkedin_URL_formula__c</fullName>
        <formula>LinkedIn_URL__c</formula>
        <label>Linkedin URL formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoggedIn__c</fullName>
        <description>This Field is created as part of Qentinal Data Migration</description>
        <label>LoggedIn</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lusha__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lusha</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MQL_Date__c</fullName>
        <label>MQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MQL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mass_Email_Filter__c</fullName>
        <formula>ISBLANK(EmailBouncedDate)</formula>
        <label>Mass Email Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_Type_CP__c</fullName>
        <description>Meeting Type (as setup under Meeting Types - Templates)</description>
        <label>Meeting Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modigie__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Modigie</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS_Survey_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://www.getfeedback.com/r/ksjKM1n4?Contact_ID=&quot;&amp;Id,&quot;Click Here&quot;)</formula>
        <label>NPS Survey Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Meeting__c</fullName>
        <label>Next Meeting</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_Longer_Works_Here__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Longer Works Here</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Show_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prospect didn’t show up. Maps against no show button</description>
        <label>No Show</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outreach_Actively_Being_Sequenced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field identifies if a Prospect is Active in a sequence.</description>
        <label>Actively Being Sequenced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_Name__c</fullName>
        <label>Current Sequence Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_Status__c</fullName>
        <label>Current Sequence Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_Step_Number__c</fullName>
        <label>Current Sequence Step Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_Step_Type__c</fullName>
        <label>Current Sequence Step Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_Task_Due_Date__c</fullName>
        <label>Current Sequence Task Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_User_Name__c</fullName>
        <description>This field lists the name of the sequencer.</description>
        <label>Current Sequence User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Finished_Sequence__c</fullName>
        <description>Imports a list of sequences the Prospect has finished in comma-spearated format.
Note: Requires mapping the Finished Sequence field in Salesforce.</description>
        <label>Finished Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Number_of_Active_Sequences__c</fullName>
        <description>This field lists how many sequences the Prospect is currently active in.</description>
        <label>Number of Active Sequences</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Number_of_Active_Tasks__c</fullName>
        <description>This field lists how many incomplete tasks are associated with the Prospect.</description>
        <label>Number of Active Tasks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pardot_Tag__c</fullName>
        <label>Pardot Tag</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qentinel_Pace_Plan__c</fullName>
        <description>This Field is created as part of Qentinel data Migration</description>
        <label>Qentinel Pace Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Pro</fullName>
                </value>
                <value>
                    <fullName>Team</fullName>
                </value>
                <value>
                    <fullName>Team 24x7</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Starter</fullName>
                </value>
                <value>
                    <fullName>Team 2018</fullName>
                </value>
                <value>
                    <fullName>Scale</fullName>
                </value>
                <value>
                    <fullName>Reporter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qentinel_Partner__c</fullName>
        <description>This Field is created as part of Qentinal Data Migration</description>
        <label>Qentinel Partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Receive_Release_Communication__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For contacts against Salesforce Orgs. If checked they too will receive the Release Communication.</inlineHelpText>
        <label>Receive Release Communication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIGSTR__R_Score__c</fullName>
        <label>R Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIGSTR__SigstrSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SigstrSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Started_First_Module__c</fullName>
        <label>Started First Module</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Student_Id__c</fullName>
        <label>Student Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Country__c</fullName>
        <label>Target Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Target_Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Targeted_in_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This box is for Salesforce.com employees that have been targeted in campaigns, to ensure they are not emailed multiple times.</inlineHelpText>
        <label>Targeted in Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tocca_Token__c</fullName>
        <externalId>true</externalId>
        <label>Tocca Token</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Contact_Questionnaire_Type__c</fullName>
        <description>Next questionnaire type (Onboarding or Initial/Renewal Relationship) - for informational purposes.Two weeks after the Onboarding Send Date has passed, the field automatically updates to show that the next questionnaire type is Initial.</description>
        <formula>Account.TopBoxWG__TopBox_Next_Questionnaire_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Next questionnaire type (Onboarding or Initial/Renewal Relationship) - for informational purposes.Two weeks after the Onboarding Send Date has passed, the field automatically updates to show that the next questionnaire type is Initial.</inlineHelpText>
        <label>TopBox - Next Questionnaire Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Overall_Score__c</fullName>
        <label>Sentiment (0-10 Rating)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__Response_Date__c</fullName>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_CTA__c</fullName>
        <label>TopBox CTA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Individual_Response__c</fullName>
        <label>TopBox Individual Response</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Initial_PreNote_OK__c</fullName>
        <formula>AND(
TopBoxWG__TopBox_Send_Survey__c,
TopBoxWG__TopBox_Send_PreNote__c
		,TopBoxWG__TopBox_Initial_Send_Date__c &gt; (NOW() + (24/24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used as part of  Workflow Rule: Topbox - PreNote - Initial to trigger TopBox PreNote emails prior to a scheduled questionnaire, if Workflow Rules are used in lieu of Custom Metadata Types &gt; Topbox PreNote Email.</inlineHelpText>
        <label>TopBox - Initial PreNote OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Initial_Send_Date__c</fullName>
        <description>Date on which the Initial Relationship questionnaire is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True).</description>
        <inlineHelpText>Date on which the Initial Relationship questionnaire is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True).</inlineHelpText>
        <label>TopBox - Initial Relationship Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Next_Questionnaire_Send_Date__c</fullName>
        <description>Date on which the next questionnaire is scheduled to be sent out to the selected contacts - for informational purposes. Once the upcoming Onboarding/Initial/Renewal Send Date has passed, the field automatically updates to reflect the next send date.</description>
        <formula>Account.TopBoxWG__TopBox_Next_Questionnaire_Send_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date on which the next questionnaire is scheduled to be sent out to the selected contacts - for informational purposes. Once the upcoming Onboarding/Initial/Renewal Send Date has passed, the field automatically updates to reflect the next send date.</inlineHelpText>
        <label>TopBox - Next Questionnaire Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Next_Renewal_Send_Date__c</fullName>
        <description>Date on which the Renewal Relationship questionnaire is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True).</description>
        <inlineHelpText>Date on which the Renewal Relationship questionnaire is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True).</inlineHelpText>
        <label>TopBox - Renewal Relationship Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Onboarding_PreNote_OK__c</fullName>
        <formula>AND(
					TopBoxWG__TopBox_Send_Survey__c,
					TopBoxWG__TopBox_Send_PreNote__c
				,TopBoxWG__TopBox_Onboarding_Send_Date__c &gt; (NOW() + (24/24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used as part of  Workflow Rule: Topbox - PreNote - Onboarding to trigger TopBox PreNote emails prior to a scheduled questionnaire, if Workflow Rules are used in lieu of Custom Metadata Types &gt; Topbox PreNote Email.</inlineHelpText>
        <label>TopBox - Onboarding PreNote OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Onboarding_Send_Date__c</fullName>
        <description>Date on which the Onboarding questionnaire is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True). Field will be blank for accounts that have completed the onboarding process more than 2 months ago.</description>
        <inlineHelpText>Date on which the Onboarding assessment is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True). Field may be blank for accounts that have completed the onboarding process more than 8 months ago.</inlineHelpText>
        <label>TopBox - Onboarding Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Ongoing_PreNote_OK__c</fullName>
        <formula>AND(
TopBoxWG__TopBox_Send_Survey__c,
TopBoxWG__TopBox_Send_PreNote__c
		,TopBoxWG__TopBox_Ongoing_Relationship_Send_Date__c &gt; (NOW() + (24/24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used as part of  Workflow Rule: Topbox - PreNote - Ongoing to trigger TopBox PreNote emails prior to a scheduled questionnaire, if Workflow Rules are used in lieu of Custom Metadata Types &gt; Topbox PreNote Email.</inlineHelpText>
        <label>TopBox - Ongoing PreNote OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Ongoing_Relationship_Send_Date__c</fullName>
        <description>Date on which the next Ongoing Relationship questionnaire is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True). Once the most current Ongoing Relationship date has passed, the field automatically updates to reflect the next Ongoing Relationship send date.</description>
        <inlineHelpText>Date on which the next Ongoing questionnaire is scheduled to be sent out to the selected contacts (Contact: Send Onboarding/Relationship = True). Once the most current Ongoing date has passed, the field automatically updates to reflect the next send date.</inlineHelpText>
        <label>TopBox - Ongoing Relationship Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_PreNote_APEX_OK__c</fullName>
        <formula>TopBoxWG__TopBox_Send_PreNote__c &amp;&amp;  TopBoxWG__TopBox_Send_Survey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used as part of Apex code for Custom Metadata Types &gt; Topbox PreNote Email to determine if contacts will receive TopBox PreNote emails prior to a scheduled questionnaire.</inlineHelpText>
        <label>TopBox PreNote APEX OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Renewal_PreNote_OK__c</fullName>
        <formula>AND(
TopBoxWG__TopBox_Send_Survey__c,
TopBoxWG__TopBox_Send_PreNote__c
				,TopBoxWG__TopBox_Next_Renewal_Send_Date__c &gt; (NOW() + (24/24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used as part of  Workflow Rule: Topbox - PreNote - Renewal to trigger TopBox PreNote emails prior to a scheduled questionnaire, if Workflow Rules are used in lieu of Custom Metadata Types &gt; Topbox PreNote Email.</inlineHelpText>
        <label>TopBox - Renewal PreNote OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Role__c</fullName>
        <label>TopBox Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Budget Holder</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Administrator</fullName>
                </value>
                <value>
                    <fullName>End User</fullName>
                </value>
                <value>
                    <fullName>Program Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Send_PreNote__c</fullName>
        <formula>$CustomMetadata.TopBoxWG__TopBox_Settings__mdt.TopBoxWG__Global_Settings.TopBoxWG__Send_PreNote_Emails__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field shows whether Custom Metadata Types &gt; TopBox Settings &gt; Global Settings: Send PreNote Emails checkbox is True/False (active/inactive).</inlineHelpText>
        <label>TopBox - Send PreNote</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>